--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -82,7 +82,7 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  width: 100%;
+  max-width: 300px;
 }
 
 .card:hover,
